remove local http server and fix some warnings